fixed z-index of notes

--- a/src/styles/NoteApp.css
+++ b/src/styles/NoteApp.css
@@ -90,7 +90,7 @@ body {
 .popup-div {
     width: 100vw;
     height: 100vh;
-    z-index: 2;
+    z-index: 4;
     backdrop-filter: blur(20px);
     display: flex;
     justify-content: center;
@@ -109,7 +109,7 @@ body {
     background-color: gray;
     border-radius: 10px;
     display: block;
-    z-index: 2;
+    z-index: 5;
     position: fixed;
     top: 10%;
 }
@@ -164,7 +164,7 @@ body {
 .smol-popup{
     position: fixed;
     top: 10%;
-    z-index: 2;
+    z-index: 5;
     padding: 20px;
     height: fit-content;
     width: 400px;
@@ -214,6 +214,7 @@ body {
     padding: 20px;
     background-color: rgb(51, 51, 51);
     max-width: 700px;
+    z-index: 2;
 }
 
 .zn-header {
